# collectd

./: .gitignore  configure.ac
src/: Makefile.am  p711.c  p711_prov.c
src/daemon/: collectd.conf
src/p711/: Makefile.am  do_provision.c  p711prov  p711prov.c
src/p711/.deps/: p711prov-p711prov.Po
